@@ -1,0 +1,16 @@
+import { PRODUCT_LIST_REQUEST, PRODUCT_LIST_SUCCESS, PRODUCT_LIST_FAIL } from "../types/productConstants"
+import axios from 'axios';
+const listProducts = () => async (dispatch) => {
+  try {
+
+    dispatch({ type: PRODUCT_LIST_REQUEST });
+    const { data } = await axios.get("/api/products");
+    dispatch({ type: PRODUCT_LIST_SUCCESS, payload: data });
+  }
+  catch (error) {
+
+    dispatch({ type: PRODUCT_LIST_FAIL, payload: error.message });
+  }
+}
+
+export { listProducts }
