@@ -1,0 +1,6 @@
+import { combineReducers } from "redux";
+import { productReducer } from "./productReducer";
+
+export const rootReducer = combineReducers({
+    productList: productReducer,
+})
